2013-06-25  Yufeng Zhang  <Yufeng.Zhang@arm.com>

	* aarch64/crt0.S (GEN_DWORD): New macro definition.
	(PTR_REG): Ditto.
	(PTR_SIZE): Ditto.
	(PTR_LOG_SIZE): Ditto.
	(start): Use GEN_DWORD to replace the .dword of HeapBase,
	__bss_start__, __bss_end__, FUNCTION(_fini), env and
	CommandLine; when __ILP32__ is defined, set the stack base to
	the top end of the 32-bit address space if the returned value
	from the Angel API call is larger than or equal to 4 GiB.
	Also carry out sanity check on the heap base; abort if the
	base is larger than or equal to 4 GiB.  Use other new
	macros in the instructions that processes the argv arrays.
	(StackBase): New lable; replace __stack_base__.
	(__stack_base__): Set with StackBase or StackBase + 4.

2013-05-30  Jeff Johnston  <jjohnstn@redhat.com>

	* rs6000/Makefile.in: Add sim-times support.  This file has been
	moved from newlib/libc/machine/powerpc and renamed.
	* rs6000/sim-times.c: New file.

2013-05-14  DJ Delorie  <dj@redhat.com>
	    Nick Clifton  <nickc@redhat.com>

	* configure.in (msp430*-*-elf): Add.
	* configure: Regenerate.
	* msp430: New directory.

2013-04-19  Steve Ellcey  <sellcey@imgtec.com>

	* mips/cfe_api.h (int64_t): Remove define.
	(uint64_t): Remove define.
	(intptr_t): Remove define.
	(uintptr_t): Remove define.
	(sys/types.h): Remove include.
	(_ansi.h): Remove include.

2013-04-19  Yufeng Zhang  <yufeng.zhang@arm.com>

	* aarch64/Makefile.in (rdimon-crt0.o, rdimon-trap.o)
	(rdimon-_exit.o, rdimon-_kill.o, rdimon-syscalls.o)
	(rdimon-libcfunc.o): Add $(CFLAGS) to the compiler command line.
	* aarch64/cpu-init/Makefile.in (${CPU_INIT_OBJS}): Add $(CFLAGS)
	to the compiler command line.

2013-02-10  Peter Marheine  <peter@taricorp.net>

	* libgloss/rx/Makefile.in: Respect DESTDIR when installing

2013-02-04  Greta Yorsh  <greta.yorsh@arm.com>

	* arm/elf-rdimon.specs (-lrdimon): Change link to lib.

2013-02-01  Nick Clifton  <nickc@redhat.com>

	* v850/crt0.S: Add recognition of the e3v5